# embassy-playground

./: flake.nix
adc-test/: Cargo.toml
adc-test/src/: main.rs
pwm-test/: Cargo.toml
pwm-test/src/: main.rs
wifi-gw/: Cargo.toml
wifi-gw/.cargo/: config.toml
wifi-gw/src/: main.rs
