[package]
name = "wifi-gw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6" , features = ["inline-asm"]}
cortex-m-rt = "0.7.0"
#cortex-m-rt-macros = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version ="0.3.0", features = ["nightly", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] } #, git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.4" , features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0" , features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-net = { version = "0.1.0", features = ["defmt", "nightly", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
#ssd1306 = "0.7.1"
embedded-io-async = { version = "0.6.0", features = ["defmt-03"] }
embedded-hal-async = "1.0.0-rc.1"
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }
rust-mqtt = { version = "0.1.5", default-features = false, features = [ "defmt" ] }
# embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
static_cell = { version = "1.1", features = ["nightly"]}

[patch.crates-io]
rust-mqtt = { git = "https://github.com/tinhead/rust-mqtt.git", rev = "8665130e77929159e56d0d3edeb8a30b15cdeb23"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
# embassy-hal-common = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "02d2c06b23d2c2359e8673a95a47b4a7b2dd98a8" }

[profile.release]
debug = true
